Source/Test/Services/MicroserviceTemplate/microservice-template-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-template-web-deployment
  labels:
    app: microservice-template-web
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-template-web
  template:
    metadata:
      labels:
        app: microservice-template-web
    spec:
      containers:
      - name: microservice-template-web
        image: adronl0t.azurecr.io/microservice-template-web:stable
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 80
        livenessProbe:
          httpGet:
            path: /health/live
            port: 80
        ports:
        - containerPort: 80
    restartPolicy: always
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-template-web-service
  namespace: test
spec:
  selector:
    app: microservice-template-web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-template-web-ingress
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt
    cert-manager.io/cluster-issuer: letsencrypt
  namespace: test
spec:
  tls:
  - hosts:
    - adronl-t-microservice-template-web.westeurope.cloudapp.azure.com
      secretName: microservice-template-web-tls
  rules:
  - host: adronl-t-microservice-template-web.westeurope.cloudapp.azure.com
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: microservice-template-web-service
            port: 
              number: 8080
